# Casserole

./: .gitignore  Makefile
rust/src/: lib.rs  logging.rs
rust/src/js_interop/: event_handlers.rs
src/core/: Cargo.toml
src/core/key_segment/: Cargo.toml
src/core/key_segment/key_segment_derive/: Cargo.toml
src/core/key_segment/key_segment_derive/src/: lib.rs
src/core/key_segment/src/: lib.rs
src/core/src/: event_handlers.rs  graphics.rs  js_interop.rs  lib.rs  logging.rs  platform.rs
src/core/src/js_interop/: graphics.rs
src/core/src/state/: mod.rs
src/core/src/ui_library/: container.rs  expanded.rs  list.rs  mod.rs  padding.rs  sized_box.rs
src/core/src/ui_library/compound/: button.rs  hoverable.rs  mod.rs
src/sdl2-frontend/: .gitignore  Cargo.toml  build.rs
src/sdl2-frontend/src/: graphics.rs  logging.rs  main.rs
src/wasm-frontend/: Cargo.toml
src/wasm-frontend/src/: event_handlers.rs  graphics.rs  lib.rs  logging.rs
src/web/: index.html
web/: index.html
web/css/: styles.css
