[package]
name = "casserole-core"
version = "0.1.0"
edition = "2021"
authors = ["Morgan Saville <gbt505@hotmail.com>"]
description = "A tool for designing and testing digital circuits"
license = "MIT/Apache-2.0"
repository = "https://github.com/slippedandmissed/Casserole"

[lib]
crate-type = ["rlib"]

[dependencies]
derivative = "2.2.0"
key_segment = { path = "./key_segment" }
key_segment_derive = { path = "./key_segment/key_segment_derive" }
